--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,14 @@
-name: Deploy HTML to GitHub Pages
+name: 🚀 Deploy HTML para GitHub Pages
 
 on:
   push:
-    branches: ["main"]
-  workflow_dispatch:
+    branches: ["main"]  # Dispara quando houver push na branch main
+  workflow_dispatch:     # Permite executar manualmente
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: read         # Permite ler o conteúdo do repositório
+  pages: write           # Permite escrever na página do GitHub Pages
+  id-token: write        # Necessário para autenticação do Pages
 
 concurrency:
   group: "pages"
@@ -16,19 +16,18 @@ concurrency:
 
 jobs:
   deploy:
+    name: 📦 Construir e Publicar Site
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: 🛒 Clonar Repositório
         uses: actions/checkout@v4
 
-      - name: Setup Pages
+      - name: ⚙️ Configurar GitHub Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload HTML site
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: .
+      - name: 🔍 Verificar existência do index.html
+        run: |
+          if [ ! -f index.html ]; then
+            echo "❌ index
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
